# KMeansACA

./: README.md
DataSet/: DataSet10000x10.txt  DataSet1000x2.txt  DataSet100x3.txt
DataSet/other/: DataSet100000x10.txt  DataSet10000x10.txt  DataSet1250x10.txt  DataSet2500x10.txt  DataSet3750x10.txt  DataSet40000x10.txt  DataSet50000x10.txt  DataSet5000x10.txt  DataSet6250x10.txt  DataSet7500x10.txt  DataSet8750x10.txt
DataSet/targets/: DataSet1000x3.txt  DataSet1500x3.txt  DataSet3000x3.txt  DataSet5000x3.txt  DataSet7500x3.txt
DataSet/weak/: DataSet10000x10.txt  DataSet1250x10.txt  DataSet1875x10.txt  DataSet2500x10.txt  DataSet3125x10.txt  DataSet3750x10.txt  DataSet4375x10.txt  DataSet5000x10.txt  DataSet5625x10.txt  DataSet6250x10.txt  DataSet625x10.txt  DataSet6875x10.txt  DataSet7500x10.txt  DataSet8125x10.txt  DataSet8750x10.txt  DataSet9375x10.txt
Parallel/: .clang-uml  CMakeLists.txt  Centroid.cpp  Centroid.h  Cluster.cpp  Cluster.h  Makefile  Point.cpp  Point.h  Tupla.cpp  Tupla.h  gprof_test.sh  kmeans_parallel.cpp  results_ex_proc.txt  run_kmeans_test.sh  test_alg_parallel.sh  test_weak.sh
Serial/: CMakeLists.txt  Centroid.cpp  Centroid.h  Cluster.cpp  Cluster.h  Makefile  Point.cpp  Point.h  Tupla.cpp  Tupla.h  kmeans_sequential.cpp  test_alg_serial.sh
utils/: datasetGenerator.py  setup_proj.sh  test_conn.sh
